# aimo-evaluation

./: README.md  pyproject.toml  run_hendrycks_math_augment.sh
data/: aimo-2025-reference-smoke___rephrase=gpt-oss-120b-aimo3-gguf:low.cleaned.jsonl  gsm-symbolic-permutations-50.jsonl  gsm-symbolic-reference.jsonl  hendrycks-math-test-reference-100.jsonl  hendrycks-math-test-reference-100___distract-clean=gpt-oss-120b-aimo3-gguf_low.jsonl  hendrycks-math-test-reference-100___distract=gpt-oss-120b-gguf_low.jsonl  hendrycks-math-test-reference-100___domain-clean=gpt-oss-120b-aimo3-gguf_low.jsonl  hendrycks-math-test-reference-100___domain=gpt-oss-120b-gguf_low.jsonl  hendrycks-math-test-reference-100___rename-clean=gpt-oss-120b-aimo3-gguf_low.jsonl  hendrycks-math-test-reference-100___rename=gpt-oss-120b-gguf_low.jsonl  hendrycks-math-test-reference-100___rephrase-clean=gpt-oss-120b-aimo3-gguf_low.jsonl  hendrycks-math-test-reference-100___rephrase=gpt-oss-120b-aimo3-gguf_low.jsonl  hendrycks-math-test-reference-100___rephrase=gpt-oss-120b-gguf_low.jsonl  hendrycks-math-test-reference-100___typos-clean=gpt-oss-120b-aimo3-gguf_low.jsonl  hendrycks-math-test-reference-100___typos=gpt-oss-120b-gguf_low.jsonl  hendrycks-math-test-reference.jsonl  hendrycks-math-train-reference-1000.jsonl  hendrycks-math-train-reference-500.jsonl  hendrycks-math-train-reference.jsonl
robustness-analyses/: find_permutation_decay.py  main.py
scripts/: build_gsm_symbolic.py  build_hendrycks_math.py  subsample_gsm_symbolic.py  subsample_hendrycks_math.py
slurm/: gsm_symbolic_all.slurm  (+1 more)
